# junctek_monitor

./: .editorconfig  .gitignore  BTjuntek.py  Makefile  README.md  juntek485.py  juntek_monitor.service  pyproject.toml  requirements.txt  setup.py
src/junctek_monitor/: BTjuntek.py  __init__.py  config.py  jtdata.py  juntek485.py
src/juntek_monitor/: btdevice.py  config.ini  config.py  device.py  jt_mqtt.yaml  jtdata.py  juntek485.py  main.py
tests/: test_btdevice_callback.py  test_config.py  test_device_announce.py  test_jtdata.py  test_rs485_callback.py
